--- a/myApp/public/index.html
+++ b/myApp/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Test React App</title>
+    <title>Score Buddy</title>
 
     <base href="/" />
 
@@ -20,7 +20,7 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Test React App" />
+    <meta name="apple-mobile-web-app-title" content="Score Buddy" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/assets/icon/icon.png" type="image/png">
